# genetic_alg_konsole

./: README.md  settings_bc.json  спецификация байт-кода.docx
code/: CMakeLists.txt  main.cpp  main_program.cpp  main_program.hpp
code/include/: array_digits.hpp  byte_code.cpp  byte_code.hpp  byte_code_genetic.cpp  byte_code_genetic.hpp  fitness.cpp  fitness.hpp  genetic.cpp  genetic.hpp  get_file.hpp  global.cpp  global.hpp  random.cpp  random.hpp  tomatik_clah.cpp  tomatik_clah.hpp  tomatik_degree_of_completion.hpp
